--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,10 +5,6 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- Include only if your app benefits from precise location access. -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-<!--
-C:\Users\daank\AppData\Local\Android\Sdk\platform-tools\adb forward tcp:5277 tcp:5277
-C:\Users\daank\AppData\Local\Android\Sdk\extras\google\auto\desktop-head-unit.exe
--->
 
     <application
         android:allowBackup="true"
@@ -20,26 +16,31 @@ C:\Users\daank\AppData\Local\Android\Sdk\extras\google\auto\desktop-head-unit.ex
         android:supportsRtl="true"
         android:theme="@style/Theme.PolestarShare"
         tools:targetApi="31">
+        <activity
+            android:name=".MainActivity2"
+            android:exported="false" />
+        <activity
+            android:name=".Navigation"
+            android:exported="false" />
 
         <meta-data
             android:name="com.google.android.gms.car.application"
-            android:resource="@xml/automotive_app_desc"/>
+            android:resource="@xml/automotive_app_desc" />
 
         <service
             android:name=".MainCarAppService"
             android:exported="true"
-            android:label="@string/app_name"
-            android:icon="@mipmap/ic_launcher"
-            android:roundIcon="@mipmap/ic_launcher_round"
             android:foregroundServiceType="location"
-            >
-
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:roundIcon="@mipmap/ic_launcher_round">
             <intent-filter>
                 <action android:name="androidx.car.app.CarAppService" />
+
                 <category android:name="androidx.car.app.category.NAVIGATION" />
             </intent-filter>
-
         </service>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="YOUR_API_KEY" />
